# automatic-tweet-generator

./: .flake8  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate.yml  publish.yml
data/: state.json
data/runs/: 2026-02-24T13-43-57.436081+00-00.json  2026-02-25T16-41-05.867867+00-00.json  2026-02-25T17-09-34.521637+00-00.json  2026-02-25T17-20-32.497951+00-00.json  2026-02-25T18-58-10.984748+00-00.json  2026-02-25T19-03-14.729078+00-00.json
docs/: scoring.md  threads.md
scripts/: generate.sh  publish.sh
src/: config.py  models.py
src/generation/: gemini_client.py  generator.py  prompt_builder.py
src/news/: ranker.py  rss_parser.py  sources.py
src/storage/: state.py
src/telegram/: bot.py
src/twitter/: publisher.py
src/workflows/: generate.py  publish.py
tests/: conftest.py  test_generator.py  test_prompt_builder.py  test_publisher.py  test_ranker.py  test_rss_parser.py  test_state.py  test_telegram_bot.py
tests/fixtures/: sample_gemini_response.json  sample_rss.xml
